traces/bug_347.txt
src/medit/items.c:336: error: DEAD_STORE
  The value written to &ym (type float) is never used.
Showing all 1 steps of the trace


src/medit/items.c:336:3: Write of unused value
334.     glLineWidth(1.0f);
335.     xm = sc->par.xs / 2.0f;
336.     ym = sc->par.ys / 2.0f;
         ^
337.     glRecti(200,160,440,320);
338.   
